Fix GetServerInfo to handle milestone release version.
Also, add the README to phar package and display it when package is run from the command line.
Running the package with a single argument gets the server info for that host (a second argument specifies port number.)

--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,7 @@
 		<mkdir dir="./build" />
 		<copy todir="./build">
 			<fileset dir=".">
+				<include name="README.md" />
 				<include name="LICENSE" />
 				<include name="lib/" />
 			</fileset>
