Don't compress PHAR and don't autoload classes that aren't in the PHAR.
De-compression is not available on every platform (notably Heroku).
Autoloader shouldn't be greedy. Only match things we know belong to us.

--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,7 @@
 		<pharpackage
 			destfile="./neo4jphp.phar"
 			basedir="./build"
-			compression="gzip"
+			compression="none"
 			stub="./stub.php"
 			signature="sha1">
 			<fileset dir="./build">
