--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ php:
   - 5.4
 
 before_script:
-  - pecl install memcached
+  - wget http://pecl.php.net/get/memcache-2.2.6.tgz
+  - tar -xzf memcache-2.2.6.tgz
+  - sh -c "cd memcache-2.2.6 && phpize && ./configure --enable-memcache && make && sudo make install"
+  - echo "extension=memcache.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
 
 script: cd ./tests && phpunit
