--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,9 @@ before_script:
   - tar -xzf memcache-2.2.6.tgz
   - sh -c "cd memcache-2.2.6 && phpize && ./configure --enable-memcache && make && sudo make install"
   - echo "extension=memcache.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+  - wget http://pecl.php.net/get/memcached-2.0.1.tgz
+  - tar -xzf memcached-2.0.1.tgz
+  - sh -c "cd memcached-2.0.1 && phpize && ./configure --enable-memcached && make && sudo make install"
+  - echo "extension=memcached.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
 
 script: cd ./tests && phpunit
