--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,6 @@ php:
   - 5.3
   - 5.4
 
-before_script:
-  - wget http://pecl.php.net/get/memcache-2.2.6.tgz
-  - tar -xzf memcache-2.2.6.tgz
-  - sh -c "cd memcache-2.2.6 && phpize && ./configure --enable-memcache && make && sudo make install"
-  - echo "extension=memcache.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
-  - wget http://pecl.php.net/get/memcached-2.0.1.tgz
-  - tar -xzf memcached-2.0.1.tgz
-  - sh -c "cd memcached-2.0.1 && phpize && ./configure --enable-memcached && make && sudo make install"
-  - echo "extension=memcached.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
+before_script: phpenv config-add phpconfig.ini
 
 script: cd ./tests && phpunit
