--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   ],
   "require": {
     "php": ">=5.3.0",
-    "ext-curl": "*"
+    "ext-curl": "*",
+	"illuminate/support": "4.0.x"
   },
   "autoload": {
     "psr-0": {"Everyman\\Neo4j":"lib/"}
