Phing and PHPUnit are dev dependencies; phing is used to run unit tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ php:
   - 5.4
   - 5.5
 
-before_script: phpenv config-add phpconfig.ini
+before_script:
+    - phpenv config-add phpconfig.ini
+    - composer install --dev
 
-script: cd ./tests && phpunit
+script: ./vendor/bin/phing
