--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   },
   "require-dev": {
     "phing/phing": "2.6.*",
-    "phpunit/phpunit": "3.7.*"
+    "phpunit/phpunit": "3.7.*",
+    "squizlabs/php_codesniffer": "1.5.*"
   },
   "autoload": {
     "psr-0": {"Everyman\\Neo4j":"lib/"}
