Fix styling errors and turn on style checking for CI.
Also, remove some unused default values. This is technically a BC, but hopefully no one is using the lower level batch commands directly and are instead using the Client and/or Batch API.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script:
     - phpenv config-add phpconfig.ini
     - composer install --dev
 
-script: ./vendor/bin/phing
+script: ./vendor/bin/phing ci
